added admin page

--- a/markup/sass/3-classes.scss
+++ b/markup/sass/3-classes.scss
@@ -10,6 +10,11 @@
 	margin-left: auto;
 	margin-right: auto;
 }
+.center-fluid {
+	margin-left: auto;
+	margin-right: auto;
+	display: table;
+}
 
 .upper {text-transform: uppercase;}
 .lower {text-transform: lowercase;}
