added register validation in client

--- a/markup/sass/4-content.scss
+++ b/markup/sass/4-content.scss
@@ -488,6 +488,9 @@ body, html {height: 100%;}
 
 
 /* authPage */
+.auth-hint {
+
+}
 .authPage{
 	background-image: url(/uploads/img/img-8.jpg);
 	background-size: cover;
@@ -508,12 +511,6 @@ body, html {height: 100%;}
 
 	.main-title {color: $skyBlue-lighten;}
 }
-.auth-btn {
-	@extend ._center;
-	display: table;
-	background: $skyBlue;
-}
-.auth-btn:focus {background: $skyBlue + 20 !important;}
 /* end authPage */
 
 /* adds to MaterializeCSS */
