--- a/public/components/pages/register/register.html
+++ b/public/components/pages/register/register.html
@@ -6,6 +6,7 @@
 
 		<div class="container">
 			<div class="row">
+				<div class="auth-hint white-text">{{loginStatus}}</div>
 
 				<div class="col l12 m12 s12 _center card">
 					<div class="input-field col s12 m4 l4">
@@ -18,7 +19,7 @@
 				    </div>
 					<div class="input-field col s12 m4 l4">
 						<input ng-model="userData.contacts.email" id="email" type="text" class="validate">
-						<label for="email">Почта*</label>
+						<label for="email">E-mail*</label>
 				    </div>
 				</div>
 
@@ -32,8 +33,8 @@
 						<label for="secondName">Отчество</label>
 				    </div>
 					<div class="input-field col s12 m4 l4">
-						<input ng-model="userData.surname" id="surname" type="text" class="validate">
-						<label for="surname">Фамилия*</label>
+						<input ng-model="userData.surName" id="surName" type="text" class="validate">
+						<label for="surName">Фамилия*</label>
 				    </div>
 				</div>
 
@@ -46,7 +47,7 @@
 
 			</div>
 
-			<button ng-click="register(userData)" class="auth-btn btn waves-effect waves-light"> <span>Зарегистрироваться</span> </button>
+			<button ng-click="register(userData)" class="center-fluid btn skyBlue waves-effect waves-light"> <span>Зарегистрироваться</span> </button>
 
 		</div>
 	</div>
