--- a/public/components/pages/admin/admin.html
+++ b/public/components/pages/admin/admin.html
@@ -10,6 +10,8 @@
 					<span> Создать Новость </span>
 				</h4>
 
+				<div class="validationStatus black-text">{{validationStatus}}</div>
+
 				<div class="col l12 m12 s12">
 					<div class="input-field col s12 m6 l6">
 						<input ng-model="postData.title" id="title" type="text" class="validate">
