--- a/markup/sass/all.scss
+++ b/markup/sass/all.scss
@@ -252,6 +252,7 @@ body, html {height: 100%;}
 	}
 	&-title {
 		@extend .txt-semibold, .txt-center;
+		width: 100%;
 		padding: 0 .3em;
 		line-height: 1.3em;
 		span {font-size: 1.3em;}
@@ -315,6 +316,7 @@ body, html {height: 100%;}
 		height: 2em;
 		border-radius: 2em;
 		padding: 0;
+		overflow: visible !important;
 		&:hover {background: rgba(#000, .2);}
 
 		.material-icons {
@@ -603,9 +605,6 @@ body, html {height: 100%;}
 
 
 /* authPage */
-.auth-hint {
-
-}
 .authPage{
 	background-image: url(/uploads/img/img-8.jpg);
 	background-size: cover;
@@ -644,4 +643,45 @@ body, html {height: 100%;}
 		background-color: $skyBlue;
 		&.btn:focus {background: $skyBlue + 20;}
 	}
+
+	.container {transition: .5s;}
+	@media (min-width: 1100px) { .container.l-950 {width: 950px;} }
+	@media (max-width: 1099px) { .container.m-full {width: 95%;} }
+	@media (max-width: 750px) {
+		.container.m-full {
+			.col.s12 {width: 100%;}
+		}
+	}
 /* end adds to MaterializeCSS */
+
+.validationStatus {padding-top: 1em;}
+
+
+.dropdownContent {
+	@extend .transition;
+	opacity: 0;
+	top: -60px;
+	height: 0;
+	width: 0;
+	overflow: hidden;
+
+	padding: .5em;
+	display: table;
+	position: absolute;
+	right: 0;
+	background: #fff;
+}
+.dropdownContent.active {
+	opacity: 1;
+	top: -30px;
+	height: auto;
+	width: auto;
+}
+
+.dropdownContent li {
+	padding: 0 .5em;
+	display: table;
+	line-height: 1em;
+	font-size: 1em;
+	span {font-size: 1em}
+}
