--- a/markup/sass/4-content.scss
+++ b/markup/sass/4-content.scss
@@ -550,23 +550,30 @@ body, html {height: 100%;}
 	width: 0;
 	overflow: hidden;
 
-	padding: .5em;
-	display: table;
+	display: block;
 	position: absolute;
 	right: 0;
 	background: #fff;
+	padding: 0;
+	margin: 0 !important;
+	font-size: 1em;
+	box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 1px 5px 0 rgba(0,0,0,0.12),0 3px 1px -2px rgba(0,0,0,0.2);
 }
 .dropdownContent.active {
 	opacity: 1;
-	top: -30px;
+	top: 0;
 	height: auto;
 	width: auto;
+	padding: 0 .5em;
 }
 
 .dropdownContent li {
-	padding: 0 .5em;
+	padding: .2em 0;
 	display: table;
-	line-height: 1em;
+	line-height: .85em;
 	font-size: 1em;
-	span {font-size: 1em}
+	span {
+		font-size: .8em;
+		color: $skyBlue;
+	}
 }
