--- a/markup/sass/all.css
+++ b/markup/sass/all.css
@@ -538,24 +538,29 @@ body, html {
   height: 0;
   width: 0;
   overflow: hidden;
-  padding: .5em;
-  display: table;
+  display: block;
   position: absolute;
   right: 0;
-  background: #fff; }
+  background: #fff;
+  padding: 0;
+  margin: 0 !important;
+  font-size: 1em;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2); }
 
 .dropdownContent.active {
   opacity: 1;
-  top: -30px;
+  top: 0;
   height: auto;
-  width: auto; }
+  width: auto;
+  padding: 0 .5em; }
 
 .dropdownContent li {
-  padding: 0 .5em;
+  padding: .2em 0;
   display: table;
-  line-height: 1em;
+  line-height: .85em;
   font-size: 1em; }
   .dropdownContent li span {
-    font-size: 1em; }
+    font-size: .8em;
+    color: #0091ea; }
 
 /*# sourceMappingURL=all.css.map */
