--- a/markup/sass/4-content.scss
+++ b/markup/sass/4-content.scss
@@ -246,7 +246,7 @@ body, html {height: 100%;}
 	display: block;
 	margin-bottom: .25em;
 	color: #00e5ff;
-	span {font-size: .6em;}
+	span {font-size: .6em !important;}
 }
 .card-controls {
     border-radius: 0 0 4px 4px;
@@ -276,14 +276,16 @@ body, html {height: 100%;}
 	border-radius: 30px;
 	text-transform: uppercase;
 	span {
-		font-size: .8em;
+		font-size: .8em !important;
 		position: relative;
 		top: -1px;
+		color: #fff;
 	}
 	.material-icons {
 		vertical-align: text-bottom;
 		position: relative;
 		top: 2px;
+		color: #fff;
 	}
 }
 
@@ -575,5 +577,64 @@ body, html {height: 100%;}
 	span {
 		font-size: .8em;
 		color: $skyBlue;
+	}
+}
+
+
+
+.postPage {
+	&-titleWrapper {
+		height: 13em;
+		overflow: hidden;
+		position: relative;
+
+		img {
+			height: auto;
+			width: 100%;
+			position: absolute;
+			left: 0;
+			top: 0;
+			z-index: 0;
+		}
+	}
+	&-titleContent {
+		padding: 0.3em;
+		width: 100%;
+		height: 100%;
+		//background-color: rgba(#000, .4);
+		// text-shadow: 1px 1px 2px rgba(#000, .5);
+		position: relative;
+		z-index: 1;
+
+		a {color: #333;}
+	}
+	&-title {
+		@extend .txt-semibold, .txt-center;
+		width: 100%;
+		padding: 0 .3em;
+		line-height: 1.3em;
+		span {font-size: 1.3em;}
+	}
+
+	&-cover {
+		@extend .clearfix;
+		width: 100%;
+		img {
+			display: block;
+			width: 100%;
+			height: auto;
+		}
+	}
+
+	.event-dateAndPlace {
+		span {
+			color:  $skyBlue;
+			font-size: .8em !important;
+		}
+	}
+
+	.card-content {
+		padding-top: 1em;
+		padding-bottom: 1em;
 	}
 }
