--- a/markup/sass/all.css
+++ b/markup/sass/all.css
@@ -24,7 +24,7 @@
 .capitalize {
   text-transform: capitalize; }
 
-.txt-center, .main-title, .main-subtitle, .main-btn, .card-controls-btn, .homeSlider-title, .homeSlider-subTitle, .homeSlider-keyWordTitle, .homeSlider-event, .post-title {
+.txt-center, .main-title, .main-subtitle, .main-btn, .card-controls-btn, .homeSlider-title, .homeSlider-subTitle, .homeSlider-keyWordTitle, .homeSlider-event, .post-title, .postPage-title {
   text-align: center; }
 
 .txt-shadow, .main-title, .main-subtitle {
@@ -36,7 +36,7 @@
 .txt-regular, .event-dateAndPlace {
   font-weight: 400; }
 
-.txt-semibold, .homeSlider-title, .homeSlider-subTitle, .homeSlider-keyWordTitle, .post-title, .card-headerTitle, .userPreview-param .param-value, .page-name, .page-param .param-value, .page-title {
+.txt-semibold, .homeSlider-title, .homeSlider-subTitle, .homeSlider-keyWordTitle, .post-title, .card-headerTitle, .userPreview-param .param-value, .page-name, .page-param .param-value, .page-title, .postPage-title {
   font-weight: 500; }
 
 .txt-bold, .main-btn, .card-controls-btn, .homeSlider-btn, .homeSlider-eventLink {
@@ -45,7 +45,7 @@
 .transition, .main-btn, .card-controls-btn, .dropdownContent {
   transition: .2s; }
 
-.clearfix:after, .authorBlock:after, .userPreview:after, .page.card:after, .card:after {
+.clearfix:after, .authorBlock:after, .userPreview:after, .page.card:after, .card:after, .postPage-cover:after {
   content: '';
   display: block;
   clear: both; }
@@ -299,7 +299,7 @@ body, html {
   margin-bottom: .25em;
   color: #00e5ff; }
   .event-dateAndPlace span {
-    font-size: .6em; }
+    font-size: .6em !important; }
 
 .card-controls {
   border-radius: 0 0 4px 4px;
@@ -333,13 +333,15 @@ body, html {
   border-radius: 30px;
   text-transform: uppercase; }
   .label span {
-    font-size: .8em;
+    font-size: .8em !important;
     position: relative;
-    top: -1px; }
+    top: -1px;
+    color: #fff; }
   .label .material-icons {
     vertical-align: text-bottom;
     position: relative;
-    top: 2px; }
+    top: 2px;
+    color: #fff; }
 
 .card-headerTitle {
   color: #333;
@@ -562,5 +564,43 @@ body, html {
   .dropdownContent li span {
     font-size: .8em;
     color: #0091ea; }
+
+.postPage-titleWrapper {
+  height: 13em;
+  overflow: hidden;
+  position: relative; }
+  .postPage-titleWrapper img {
+    height: auto;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 0; }
+.postPage-titleContent {
+  padding: 0.3em;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  z-index: 1; }
+  .postPage-titleContent a {
+    color: #333; }
+.postPage-title {
+  width: 100%;
+  padding: 0 .3em;
+  line-height: 1.3em; }
+  .postPage-title span {
+    font-size: 1.3em; }
+.postPage-cover {
+  width: 100%; }
+  .postPage-cover img {
+    display: block;
+    width: 100%;
+    height: auto; }
+.postPage .event-dateAndPlace span {
+  color: #0091ea;
+  font-size: .8em !important; }
+.postPage .card-content {
+  padding-top: 1em;
+  padding-bottom: 1em; }
 
 /*# sourceMappingURL=all.css.map */
