--- a/public/components/pages/users/users.html
+++ b/public/components/pages/users/users.html
@@ -1,8 +1,9 @@
 <title>Поиск людей</title>
 
-<h3 class="main-title"> <span>Поиск людей</span> </h3>
+<ng-include class="skyBlue" src="'components/partials/header.html'"></ng-include>
 
-<div class="container">
+<div class="container changeable-onMenuOpen">
+	<h3 class="main-title"> <span>Поиск людей</span> </h3>
 	<div class="row">
 		<div class="col l12 m12 s12 post-wrapper">
 			<div class="card">
