--- a/markup/sass/all.css
+++ b/markup/sass/all.css
@@ -1,9 +1,9 @@
-.reset-for-btn, .main-btn, .card-controls-btn, .authorBlock-moreBtn, .btnComments {
+.reset-for-btn, .main-btn, .card-controls-btn, .nav-menu__mob-header .menu-toggler, .nav-menu__mob-header .arrow-right, .authorBlock-moreBtn, .btnComments {
   background-color: transparent;
   border: none;
   outline: none;
   cursor: pointer; }
-  .reset-for-btn:focus, .main-btn:focus, .card-controls-btn:focus, .authorBlock-moreBtn:focus, .btnComments:focus {
+  .reset-for-btn:focus, .main-btn:focus, .card-controls-btn:focus, .nav-menu__mob-header .menu-toggler:focus, .nav-menu__mob-header .arrow-right:focus, .authorBlock-moreBtn:focus, .btnComments:focus {
     background: transparent; }
 
 ._center, .homeSlider-itemContent .valign, .homeSlider-btn, .post .label, .page {
@@ -42,10 +42,10 @@
 .txt-bold, .main-btn, .card-controls-btn, .homeSlider-btn, .homeSlider-eventLink {
   font-weight: 600; }
 
-.transition, .main-btn, .card-controls-btn, .dropdownContent {
+.transition, .main-btn, .card-controls-btn, .nav-menu, .nav-menu__item, .nav-menu__item span, .nav-menu__item .caret-icon, .nav-menu__mob-header .menu-toggler, .nav-menu__mob-header .menu-toggler:hover .material-icons, .nav-menu__mob-header .arrow-right:hover .material-icons, .changeable-onMenuOpen, .dropdownContent {
   transition: .2s; }
 
-.clearfix:after, .authorBlock:after, .userPreview:after, .page.card:after, .card:after, .postPage-cover:after {
+.clearfix:after, .header:after, .header-logo:after, .authorBlock:after, .userPreview:after, .page.card:after, .card:after, .postPage-cover:after {
   content: '';
   display: block;
   clear: both; }
@@ -122,6 +122,197 @@ h1, h2, h3, h4, h5, h6 {
 body, html {
   height: 100%; }
 
+.header--fixed .header {
+  position: fixed !important; }
+
+.skyBlue .header {
+  background: #0091ea !important;
+  text-shadow: none !important; }
+  .skyBlue .header .nav-menu__item span {
+    color: #eee !important; }
+  .skyBlue .header .nav-menu__item:hover span {
+    color: #fff !important; }
+
+.header {
+  padding: .4em .4em 0;
+  width: 100%;
+  position: relative;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.5); }
+  .header-logo {
+    display: block;
+    float: left; }
+
+/* nav-menu */
+.nav-menu {
+  float: right;
+  display: table;
+  overflow-y: auto; }
+
+.nav-menu__item {
+  position: relative;
+  text-transform: uppercase;
+  float: left;
+  cursor: pointer;
+  padding: .9em 1em 0; }
+  .nav-menu__item span {
+    color: #fff;
+    font-size: 1em; }
+  .nav-menu__item:hover span {
+    color: #0091ea; }
+
+.nav-menu__item .caret-icon {
+  position: relative;
+  top: 0;
+  margin-left: 1px;
+  display: inline-block;
+  width: 16px;
+  height: 15px;
+  transform: rotate(180deg); }
+  .nav-menu__item .caret-icon .material-icons {
+    color: #eee !important; }
+
+.nav-menu__item:hover {
+  color: #11c4d6; }
+
+.nav-menu__subitems {
+  transition: .2s;
+  height: 0;
+  overflow: hidden;
+  opacity: 1;
+  position: absolute;
+  top: 0;
+  padding: 0;
+  margin: 0 0 0 30px;
+  z-index: 100; }
+
+.nav-menu__subitems li,
+.nav-menu__subitems a {
+  color: #a8a7a7;
+  text-transform: none;
+  text-decoration: none;
+  font-size: 14px; }
+
+.nav-menu__subitems li:hover,
+.nav-menu__subitems a:hover {
+  color: #11c4d6; }
+
+.nav-menu__subitems li {
+  list-style: none;
+  margin: 5px 0;
+  padding: 0 5px; }
+
+.nav-menu__item_active {
+  color: #11c4d6; }
+
+.nav-menu__item_active .caret-icon {
+  transform: rotate(0deg);
+  top: 3px; }
+
+.nav-menu__item_active .nav-menu__subitems {
+  height: auto;
+  overflow: visible;
+  opacity: 1;
+  top: 40px; }
+
+.nav-menu__mob-header {
+  display: none;
+  position: relative; }
+
+.nav-menu__mob-header .menu-toggler {
+  z-index: 100;
+  position: absolute;
+  top: 10px;
+  left: -50px;
+  padding: .35em .1em 0 0;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%; }
+  .nav-menu__mob-header .menu-toggler .material-icons {
+    font-size: 1.8em; }
+
+.nav-menu__mob-header .menu-toggler:hover {
+  background-color: rgba(0, 0, 0, 0.5) !important; }
+  .nav-menu__mob-header .menu-toggler:hover .material-icons {
+    color: #0091ea !important; }
+
+:not(.header--fixed) .menu-toggler {
+  background-color: rgba(0, 0, 0, 0.5) !important; }
+
+.nav-menu__mob-header .brand-logo {
+  display: block;
+  float: left; }
+
+.nav-menu__mob-header .mob-header-title {
+  float: left;
+  color: #fff;
+  letter-spacing: 1px;
+  padding: 1em 0 0 .67em; }
+  .nav-menu__mob-header .mob-header-title span {
+    font-size: 1.5em; }
+
+.nav-menu__mob-header .arrow-right {
+  padding: .25em 0 0 .1em;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-top: 4px;
+  float: right;
+  display: block; }
+  .nav-menu__mob-header .arrow-right .material-icons {
+    font-size: 2em !important; }
+
+.nav-menu__mob-header .arrow-right:hover .material-icons {
+  color: #0091ea !important; }
+
+.changeable-onMenuOpen {
+  position: relative;
+  left: 0; }
+
+.moveLeft-onMenuOpen {
+  left: -350px !important; }
+
+@media (min-width: 701px) {
+  .moveLeft-onMenuOpen {
+    left: 0 !important; } }
+@media (max-width: 700px) {
+  .nav-menu {
+    position: fixed;
+    z-index: 100;
+    top: 0;
+    right: -350px;
+    width: 350px;
+    height: 100%;
+    background: #000; }
+
+  .nav-menu_active {
+    right: 0; }
+
+  .nav-menu__item {
+    font-size: 17px;
+    float: none;
+    margin-bottom: 15px; }
+
+  .nav-menu__subitems {
+    position: relative;
+    top: -30px;
+    background: transparent; }
+
+  .nav-menu__item_active .nav-menu__subitems {
+    top: 10px; }
+
+  .nav-menu__subitems li,
+  .nav-menu__subitems a {
+    font-size: 16px; }
+
+  .nav-menu__mob-header {
+    display: block;
+    padding: 5px 13px;
+    margin-bottom: 15px; } }
+/* end nav-menu */
 .homeSliderWrapper {
   width: 100%;
   height: 100%;
@@ -551,7 +742,7 @@ body, html {
 
 .dropdownContent.active {
   opacity: 1;
-  top: 0;
+  top: -3px;
   height: auto;
   width: auto;
   padding: 0 .5em; }
@@ -566,7 +757,7 @@ body, html {
     color: #0091ea; }
 
 .postPage-titleWrapper {
-  height: 13em;
+  padding: 1.5em 0 1em;
   overflow: hidden;
   position: relative; }
   .postPage-titleWrapper img {
@@ -587,18 +778,22 @@ body, html {
 .postPage-title {
   width: 100%;
   padding: 0 .3em;
-  line-height: 1.3em; }
+  line-height: 1.7em; }
   .postPage-title span {
-    font-size: 1.3em; }
+    font-size: 1.7em; }
 .postPage-cover {
   width: 100%; }
   .postPage-cover img {
     display: block;
     width: 100%;
     height: auto; }
-.postPage .event-dateAndPlace span {
-  color: #0091ea;
-  font-size: .8em !important; }
+.postPage .label span {
+  font-size: .65em !important; }
+.postPage .event-dateAndPlace {
+  padding: .1em 0 .5em; }
+  .postPage .event-dateAndPlace span {
+    color: #0091ea;
+    font-size: .8em !important; }
 .postPage .card-content {
   padding-top: 1em;
   padding-bottom: 1em; }
