added circuit background for body

--- a/markup/sass/4-content.scss
+++ b/markup/sass/4-content.scss
@@ -8,6 +8,7 @@ body {
 	font-family: Roboto, sans-serif;
 	font-size: $base-font-size;
 	background-color: #eee;
+	background: url(/uploads/img/circuit-50.png);
 }
 @media (max-width: 320px) {body {font-size: 7px} }
 @media (max-width: 568px) {body {font-size: 12px} }
