rendered all news on home page

--- a/markup/sass/all.css
+++ b/markup/sass/all.css
@@ -108,7 +108,8 @@ body {
   font-family: Roboto, sans-serif;
   font-size: 16px;
   background-color: #eee;
-  background: url(/uploads/img/circuit-50.png); }
+  background: url(/uploads/img/circuit-50.png);
+  background-attachment: fixed; }
 
 @media (max-width: 320px) {
   body {
