--- a/public/components/pages/post/post.html
+++ b/public/components/pages/post/post.html
@@ -1,6 +1,8 @@
 <title>Новость</title>
 
-<div class="container l-950 m-full">
+<ng-include class="" src="'components/partials/header.html'"></ng-include>
+
+<div class="container l-950 m-full changeable-onMenuOpen">
 	<div class="postPage row">
 		<div class="actionStatus black-text center-align">{{actionStatus}}</div>
 		<div class="card post">
