--- a/public/components/partials/nav-menu.html
+++ b/public/components/partials/nav-menu.html
@@ -24,4 +24,8 @@
 	<div class="nav-menu__item">
 		<a href="/#/news"> <span>Новости</span> </a>
 	</div>
+
+	<!-- <div if="!loggedUser.role" class="nav-menu__item">
+		<a href="/#/login"> <span>Войти</span> </a>
+	</div> -->
 </div>
