--- a/public/components/pages/admin/admin.html
+++ b/public/components/pages/admin/admin.html
@@ -1,8 +1,10 @@
 <title>Панель администратора</title>
 
-<h3 class="main-title upper"> <span> Панель администратора </span> </h3>
+<ng-include class="skyBlue" src="'components/partials/header.html'"></ng-include>
 
-<div class="container">
+<div class="container changeable-onMenuOpen">
+	<h3 class="main-title upper"> <span> Панель администратора </span> </h3>
+
 	<div class="row">
 		<div class="card">
 			<div class="card-content">
