--- a/public/components/pages/users/users.html
+++ b/public/components/pages/users/users.html
@@ -18,10 +18,10 @@
 					</h4>
 					<div class="card-headerInput">
 						<label for="searchInput">
-							<span>Введите один из параметров: имя, фамилия, группа, компания, год поступления, год выпуска, город, год рождения, возраст, пол </span>
+							<span>Введите один из параметров: профессиональные навыки, имя, фамилия, группа, компания, год поступления, год выпуска, город, год рождения, возраст </span>
 						</label>
 						<span ng-init="searchQuery = ''"></span>
-						<input ng-model="searchQuery" id="searchInput" type="text" placeholder="Найти одногруппника...">
+						<input ng-model="searchQuery" id="searchInput" type="text" placeholder="Найти человека...">
 						{{searchQuery}}
 					</div>
 
