fixed post deletion on home page and post page

--- a/markup/sass/4-content.scss
+++ b/markup/sass/4-content.scss
@@ -274,7 +274,7 @@ body, html {height: 100%;}
 		float: left;
 		width: 100%; // sliderWidht / n;
 		height: 100%;
-		background-image: url(/uploads/img/img-7.jpg); // 4 6 7 8 10 11
+		background-image: url(/uploads/img/slider/img-7.jpg); // 4 6 7 8 10 11
 		background-size: cover;
 	}
 	&-itemContent {
@@ -736,7 +736,7 @@ body, html {height: 100%;}
 
 /* authPage */
 .authPage{
-	background-image: url(/uploads/img/img-8.jpg);
+	background-image: url(/uploads/img/site/bg-authPage.jpg);
 	background-size: cover;
 	width: 100%;
 	height: 100%;
