--- a/public/components/pages/post/post.html
+++ b/public/components/pages/post/post.html
@@ -5,10 +5,10 @@
 <div class="container l-950 m-full changeable-onMenuOpen">
 	<div class="postPage row">
 		<div class="actionStatus black-text center-align">{{actionStatus}}</div>
-		<div class="card post">
+		<div id="post-{{post._id}}" class="card post">
 			<div class="authorBlock">
 				<a class="authorBlock-img" href="">
-					<img src="/uploads/img/user-logo-small.jpg" alt="">
+					<img src="/uploads/img/users/user-logo-small.jpg" alt="">
 				</a>
 				<div class="authorBlock-authorAndDate">
 					<a class="authorBlock-name" href="https://vk.com/producedbysoul">
