--- a/public/components/pages/admin/admin.html
+++ b/public/components/pages/admin/admin.html
@@ -26,6 +26,15 @@
 				</div>
 
 				<div class="col l12 m12 s12">
+					<span ng-init="tagsString"></span>
+					<div class="input-field col s12 m12 l12">
+						<input ng-model="tagsString" id="tagsInput" type="text" class="validate">
+						<label for="tagsInput">Введите теги через пробел</label>
+				    </div>
+				    {{tagsString}}
+				</div>
+
+				<div class="col l12 m12 s12">
 					<div class="input-field col s12 m12 l12">
 						<span ng-init="postData.parts = []"></span>
 						<textarea ng-model="postData.parts[0]" id="part-0" type="text" class="validate materialize-textarea"></textarea>
