--- a/public/components/pages/post/post.html
+++ b/public/components/pages/post/post.html
@@ -7,12 +7,12 @@
 		<div class="actionStatus black-text center-align">{{actionStatus}}</div>
 		<div id="post-{{post._id}}" class="card post">
 			<div class="authorBlock">
-				<a class="authorBlock-img" href="">
-					<img src="/uploads/img/users/user-logo-small.jpg" alt="">
+				<a class="authorBlock-img" href="/#/user?user_id={{post.creator._id}}">
+					<img src="{{post.creator.imgUrl}}" alt="">
 				</a>
 				<div class="authorBlock-authorAndDate">
-					<a class="authorBlock-name" href="https://vk.com/producedbysoul">
-						<span> Алексей Чалый </span>
+					<a class="authorBlock-name" href="/#/user?user_id={{post.creator._id}}">
+						<span> {{post.creator.name}} {{post.creator.surName}} </span>
 					</a>
 					<span class="authorBlock-date" href="">
 						<span> {{post.creationDate | date:'dd MMM, HH:mm'}} </span>
